--- a/back-end/package.json
+++ b/back-end/package.json
@@ -2,8 +2,10 @@
   "name": "back-end",
   "version": "1.0.0",
   "main": "index.js",
+  "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "nodemon index.js"
   },
   "keywords": [],
   "author": "",
@@ -17,6 +19,7 @@
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "mysql": "^2.18.1",
+    "nvm": "^0.0.4",
     "prisma": "^6.6.0",
     "swagger-ui-express": "^5.0.1",
     "yamljs": "^0.3.0"
